test/integration/statsFormatter/statsCasesFixture/sass-loader-module-not-found-error/errors.webpack-4.txt
Error in ./main.scss

  Module build failed (from Cdir/node_modules/sass-loader/lib/loader.js):
  
  @import "xxx-does-not-exist-xxx";
  ^
        File to import not found or unreadable: xxx-does-not-exist-xxx.
        in Xdir/sass-loader-module-not-found-error/main.scss (line 1, column 1)